<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <ListPreference android:entries="@array/prefEntries_recordType" android:title="@string/pref_title_record_type" android:key="pref_key_record_type" android:defaultValue="@string/prefDefault_recordType" android:dialogTitle="@string/prefDialogTitle_recordType" android:entryValues="@array/prefValues_recordType" />
        <CheckBoxPreference android:title="@string/pref_title_enable_high_quality" android:key="pref_key_enable_high_quality" android:summary="@string/pref_summary_enable_high_quality" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory>
        <CheckBoxPreference android:title="@string/pref_title_enable_sound_effect" android:key="pref_key_enable_sound_effect" android:summary="@string/pref_summary_enable_sound_effect" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
